--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>World Capitals</title>
 </head>
-<body>
-    
+<body class="flex-container">
+    <a href="index.html">
+        <h1>World Capitals Quiz</h1>
+    </a>
 </body>
 </html>
