added container with information & buttons

--- a/index.html
+++ b/index.html
@@ -8,7 +8,21 @@
 </head>
 <body class="flex-container">
     <a href="index.html">
-        <h1>World Capitals Quiz</h1>
+        <h1>World Capitals quiz</h1>
     </a>
+
+<!-- Container presenting the content -->
+<div id="content-container">
+    <h2>Welcome to the World Capital quiz</h2>
+    <p>How well do you know all the world capital's? Why not test your knowledge and see if you have what it takes to be a world capital champion?</p>
+
+
+    <div class="btn-group">
+    <a href="start.html" class="btn">Start</a>
+    <button id="open-modal" class="btn">How to play</button>
+    <a href="highscores.html" id="highScores" class="btn">High Scores</a>
+    </div>
+</div>
+
 </body>
 </html>
