adding in modal container with instructions

--- a/index.html
+++ b/index.html
@@ -24,5 +24,20 @@
     </div>
 </div>
 
+<!-- Modal Container -->
+<div id="modal-container">
+    <div id="modal-content">
+        <h2>How To Play</h2>
+
+        <p>Begin by pressing the play button</p>
+        <p>Select your difficulty</p>
+        <p>Click on the correct answers</p>
+        <p>Try beating your high score!</p>
+
+        <button id="close-modal" class="btn">Close</button>
+    </div>
+</div>
+
+
 </body>
 </html>
