implementing javascript and jquery scripts

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <!-- Container presenting the content -->
 <div id="content-container">
     <h2>Welcome to the World Capital quiz</h2>
-    <p>How well do you know all the world capital's? Why not test your knowledge and see if you have what it takes to be a world capital champion?</p>
+    <p>How confident are you in your geography? Why not test your knowledge and see if you have what it takes to be a geography champion?</p>
 
 
     <div class="btn-group">
@@ -38,6 +38,9 @@
     </div>
 </div>
 
+<!--JavaScript - jQuery & my JS-->
+<script src="assets/js/javascript.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.slim.min.js"></script>
 
 </body>
 </html>
