--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body class="flex-container">
     <a href="index.html">
-        <h1>World Capitals quiz</h1>
+        <h1>World Capitals Quiz</h1>
     </a>
 
 <!-- Container presenting the content -->
