--- a/highscores.html
+++ b/highscores.html
@@ -7,6 +7,9 @@
     <title>Geography Master - High Scores</title>
 </head>
 <body>
-    
+    <body class="flex-container">
+        <a href="index.html">
+          <h1>Geography Master</h1>
+        </a>
 </body>
 </html>
