--- a/highscores.html
+++ b/highscores.html
@@ -6,10 +6,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Geography Master - High Scores</title>
 </head>
-<body>
-    <body class="flex-container">
+<body class="flex-container">
         <a href="index.html">
           <h1>Geography Master</h1>
         </a>
+
+<!-- Container holding the content -->
+<div id="outer-container">
+
+    <h2>High Scores</h2>
+
+    <ul id="highscoreslist">
+
+    </ul>
+
+    <div class=" btn-group">
+      <a href="game.html" class="btn">Play Again?</a>
+      <a href="index.html" class="btn">Home</a>
+    </div>
+  </div>
+
 </body>
 </html>
