--- a/highscores.html
+++ b/highscores.html
@@ -26,5 +26,9 @@
     </div>
   </div>
 
+<!--JavaScript - jQuery & my JS-->
+<script src="assets/js/highscores.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.slim.min.js"></script>
+
 </body>
 </html>
