implement logo and main content container

--- a/game.html
+++ b/game.html
@@ -6,7 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Geography Master - Play</title>
 </head>
-<body>
-    
+
+<!-- Logo takes back to home page -->
+<body class="flex-container">
+        <a href="index.html">
+          <h1>Geography Master</h1>
+        </a>
+
+        <!-- Container that holds main content -->
+        <div class="outer" id="outer-container">
+
+            
+        </div>
 </body>
 </html>
