implement questions area

--- a/game.html
+++ b/game.html
@@ -25,5 +25,15 @@
                     <button class="btn difficulty" id="hard" onclick="apiAddress = hardDifficulty">Hard</button>
             </div>
         </div>
+
+        <!-- Questions and buttons -->
+        <div id="quiz-area" class="hide">
+            <div id="counter-area">
+                <p class="asnwer-count">Question number: <span id="answer-number">1</span></p>
+                <p class="score-area">Score: <span id="score">0</span></p>
+            </div>
+            <hr>
+            <h2 id="question"></h2>
+        </div>
 </body>
 </html>
