--- a/game.html
+++ b/game.html
@@ -62,5 +62,9 @@
         </div>
   
       </div>
+
+      <!--JavaScript - jQuery & my JS-->
+    <script src="assets/js/game.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.slim.min.js"></script>
 </body>
 </html>
